Closed
Bug 501015
Opened 16 years ago
Closed 16 years ago
[HTML5] Address code style comments from timeless
Categories
(Core :: DOM: HTML Parser, defect)
Core
DOM: HTML Parser
Tracking
()
RESOLVED
FIXED
People
(Reporter: hsivonen, Assigned: hsivonen)
References
Details
Attachments
(1 file)
|
61.71 KB,
patch
|
mrbkap
:
review+
mrbkap
:
superreview+
|
Details | Diff | Splinter Review |
NS_ASSERTION((!loadAsHtml5) has pointless parentheses still. Get rid of them.
| Assignee | ||
Comment 1•16 years ago
|
||
Morphing the bug to be more general, because dealing with each comment individually would lead to a ton of one-line patches to review and check in.
This is now a catch-all for parentheses, indents and comments.
Summary: [HTML5] Remove pointless parentheses in assert → [HTML5] Address code style comments from timeless
| Assignee | ||
Comment 4•16 years ago
|
||
Not included:
* Stuff that involves changing the translator.
* Stuff that has dedicated bugs.
* Stuff that would make it more difficult to transform the Java code to use Mozilla-style write params for string returns.
* Use of contract id in place of class id.
| Assignee | ||
Updated•16 years ago
|
Attachment #386054 -
Flags: superreview?(mrbkap)
Attachment #386054 -
Flags: review?(jonas)
Updated•16 years ago
|
Attachment #386054 -
Flags: superreview?(mrbkap) → superreview+
| Assignee | ||
Comment 6•16 years ago
|
||
Comment on attachment 386054 [details] [diff] [review]
Patch addressing comments from timeless
mrbkap, requesting r, since it seems sr isn't what's needed for this, but I think it would be inappropriate for me just treat your sr as an r.
Attachment #386054 -
Flags: review?(jonas) → review?(mrbkap)
Updated•16 years ago
|
Attachment #386054 -
Flags: review?(mrbkap) → review+
| Assignee | ||
Comment 7•16 years ago
|
||
Pushed. http://hg.mozilla.org/mozilla-central/rev/712073dde3c0
Thanks!
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•