Bug 501015 - Address code style comments from timeless. r+sr=mrbkap